<resources>
    <string name="app_name">ICHAT Business</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="organizations">All Users</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="new_group">New Group</string>
    <string name="add_subject">Add Subject</string>
    <string name="type_group_subject_here">Type group subject here .....</string>
    <string name="provide_a_group_subject_and_optional_group_icon">Provide a group subject and group icon</string>
    <string name="participants">Participants:</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="add_participants">Add Participants</string>
    <string name="group_admin">Group Admin</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="start_chat">Start Chat</string>
    <string name="online">Online</string>
    <string name="message">Message</string>
    <string name="loading">Loading</string>
    <string name="autenticate_crediationals">Authenticating</string>
    <string name="no_user_found">No user found</string>
    <string name="required">Required</string>
    <string name="signout">Signout</string>
    <string name="no_user_selected">No user selected</string>
    <string name="of">of</string>
    <string name="selected">selected</string>
    <string name="please_select_user">Please select user before proceed</string>
    <string name="please_add_group_name">Please add group name</string>
    <string name="please_wait">Please Wait...</string>
    <string name="data_saved_successfully">Data saved successfully</string>
    <string name="no_data_found">No Data Found</string>
    <string name="data_update_successfully">Update Successfully</string>
    <string name="user_not_login">User is not login</string>
    <string name="please_write_message">Please write message before send</string>
    <string name="no_chat_found">No Chat found</string>
    <string name="search_by_name">Search by name</string>
    <string name="update_profile">Update Profile</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="region">Region</string>
    <string name="position">Position</string>
</resources>