<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsNewGroupFragment">


        <RelativeLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back_imgview"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@id/arrow_back_imgview"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_group"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_subject"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <RelativeLayout
                android:id="@+id/camera_layout"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/camera_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                     />

                <ImageView
                    android:id="@+id/camera_imageview"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_camera_" />
            </RelativeLayout>

            <EditText
                android:id="@+id/subject_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/type_group_subject_here"
                app:layout_constraintBottom_toBottomOf="@id/camera_layout"
                app:layout_constraintEnd_toStartOf="@id/emoji_imageview"
                app:layout_constraintStart_toEndOf="@id/camera_layout"
                app:layout_constraintTop_toTopOf="@id/camera_layout" />

            <ImageView
                android:id="@+id/emoji_imageview"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_emoji"
                app:layout_constraintBottom_toBottomOf="@id/subject_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/subject_tv" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/provide_a_group_subject_and_optional_group_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/emoji_imageview"
                app:layout_constraintStart_toStartOf="@id/camera_layout"
                app:layout_constraintTop_toBottomOf="@id/camera_layout" />

            <View

                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/line_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/participents_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/participants"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/particpents_recyclerviwe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/participents_tv"
            app:layout_constraintStart_toStartOf="@id/participents_tv"
            app:layout_constraintTop_toBottomOf="@id/participents_tv" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:backgroundTint="@color/purple_700"
            android:src="@drawable/ic_baseline_done_24"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
