<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.LoginFragment">


        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:background="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/app_logo" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_45sdp" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="@id/end_guidline"
            app:layout_constraintStart_toStartOf="@id/start_guidline"
            app:layout_constraintTop_toBottomOf="@id/top_layout"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Email"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintTop_toTopOf="parent"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:layout_constraintTop_toBottomOf="@id/username_inputlayout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />



                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/cb_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Privacy Policy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_inputlayout"
                    />

                <TextView
                    android:id="@+id/terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/purple_700"
                    app:layout_constraintBottom_toBottomOf="@+id/cb_privacy_policy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_inputlayout" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_40sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_privacy_policy" />





            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_45sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
